fixing alignment of row contents to be flex-start instead of center

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -263,7 +263,7 @@ body {
     min-height: 120px;
     max-height: 120px;
     overflow: hidden;
-    align-items: center;
+    align-items: flex-start;
   }
 
   .choiceTitle {
